--- a/VM/Gestion_Pharma/Produits/templates/ajout.html
+++ b/VM/Gestion_Pharma/Produits/templates/ajout.html
@@ -15,6 +15,6 @@
             {{ form.as_p }}
             <button type="submit" class="btn btn-primary">Ajouter</button>
         </form>
-        <a href="{% url 'home' %}" class="btn btn-secondary">Retour à la liste des produits</a>
+        <a href="{% url 'produit' %}" class="btn btn-secondary">Retour à la liste des produits</a>
 
     </div>
