--- a/VM/Gestion_Pharma/Produits/templates/zone_gauche.html
+++ b/VM/Gestion_Pharma/Produits/templates/zone_gauche.html
@@ -39,9 +39,16 @@
     </ul>
     <div class="account-info">
       <div class="account-info-picture">
+        {% if request.user.is_authenticated %}
+        <a href="{% url 'deconnection' %}">
         <img src="/media/1f5d70ffed979b10b4e2a254334f0577_0_1_0liVHr1.webp" alt="Account">
+        
+        <img src="/media/1f5d70ffed979b10b4e2a254334f0577_0_1_0liVHr1.webp" alt="Account">
+        
       </div>
-      <div class="account-info-name">JeSSeLe</div>
+      <div class="account-info-name">{{request.user}}</div>
+      </a>
+      {% endif %}
       <button class="account-info-more">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal"><circle cx="12" cy="12" r="1"/><circle cx="19" cy="12" r="1"/><circle cx="5" cy="12" r="1"/></svg>
       </button>
