--- a/VM/Gestion_Pharma/UTILISATEUR/templates/nouveauMDP.html
+++ b/VM/Gestion_Pharma/UTILISATEUR/templates/nouveauMDP.html
@@ -29,34 +29,22 @@
 				<div class="login100-pic js-tilt" data-tilt>
 					<img src="{% static 'bjp/images/img-01.png' %}" alt="IMG">
 					<div class="container-login100-form-btn">
-					<p>
-						<a href="#" >
-							J'ai déjà mon compte
-						</a>
-					</p>
+					
 		</div>	
 	</div>
 <form class="login100-form validate-form" method="POST">
-
+     		{% if messages%}
+	 		{% for message in messages %}
+			<h5 class="alert alert-danger" role="alert">{{ message }}</h5>
+			{% endfor %}
+		{% endif %}
     {% csrf_token %}
     <h3 class="login100-form-title">
-        Création De Compte
+        Modication de Mot de Passe
     </h3>
-    <div class="wrap-input100 validate-input">
-        <input class="input100" type="text" name="username" placeholder="Nom utilisateur">
-        <span class="focus-input100"></span>
-        <span class="symbol-input100">
-            <i class="fa fa-user" aria-hidden="true"></i>
-        </span>
-    </div>
+   
 
-    <div class="wrap-input100 validate-input">
-        <input class="input100" type="email" name="email" placeholder="Adresse mail">
-        <span class="focus-input100"></span>
-        <span class="symbol-input100">
-            <i class="fa fa-envelope" aria-hidden="true"></i>
-        </span>
-    </div>
+  
 
     <div class="wrap-input100 validate-input">
         <input class="input100" type="password" name="password" placeholder="Mot de passe">
@@ -76,7 +64,7 @@
 
     <div class="container-login100-form-btn">
         <button class="login100-form-btn">
-            Créer un compte
+          Modifier    
         </button>
     </div>
 
